# BC_LabellingTool

./: .gitignore  CMakeLists.txt  README.md
Core/: labels.cpp  labels.h
GUI/: MainWindow.cpp  MainWindow.h  main.cpp  mainViewWidget.cpp  mainViewWidget.h
Qt_C/: CMakeLists.txt  qvtkRangeSlider.cpp  qvtkRangeSlider.h
Qt_C/test/: CMakeLists.txt  main.cpp
resourse/: 200_output.csv  559_output.csv  test.csv
